<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android@studio.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login">Login</string>
    <string name="add_channel_button">graphic for channel adding button</string>
    <string name="please_log_in">Please log in</string>
    <string name="message">message:</string>
    <string name="send_message_button_desc">graphic for send message button</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="user_name">user name</string>
    <string name="generate_user_avatar_text">Tap to generate user avatar</string>
    <string name="generate_background_colour">Generate background colour</string>
    <string name="create_user">Create User</string>
    <string name="avatar_image_desc">image to set for avatar</string>
</resources>
